--- a/SpringSecurity-SQL/src/main/resources/application.properties
+++ b/SpringSecurity-SQL/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/auth
-spring.datasource.username = root
-spring.datasource.password = cisco
+spring.datasource.url=jdbc:mysql://localhost:3306/Auth?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=NkweMapoulo@1
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
